frontend/public/assets/css/main.css
/* ... */
._feed_inner_story_para {
    text-align: center;
    color: #fff;
    font-size: 12px;
    margin: 0 0 10px;
    line-height: 19px;
    font-weight: 500;
}
._feed_inner_story_btn {
    position: absolute;
    top: -12px;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
}
._feed_inner_story_btn_link {
    background: var(--color5);
    border: 2px solid #112032;
    border-radius: 40px;
    width: 32px;
    height:32px;
}
._public_story_img {
    border-radius: 6px;
}
._feed_inner_public_story{
    overflow: hidden;
    cursor: pointer;
    -webkit-transition: .2s all ease;
    -o-transition: .2s all ease;
    transition: .2s all ease;
}
._feed_inner_public_story_image {
    position: relative;
    z-index: 2;
}
._feed_inner_public_story:hover ._feed_inner_public_story_image::before{
    opacity:.7;
}
._feed_inner_public_story_image::before {
    content: "";
    position: absolute;
    top:0;
    left:0;
    width:100%;
    height:100%;
    background: #000000;
    opacity: 0.5;
    border-radius: 6px;
    z-index: 1;
    -webkit-transition:.2s all ease;
    -o-transition:.2s all ease;
    transition:.2s all ease;
}
._feed_inner_pulic_story_txt {
    z-index: 1;
    position: absolute;
    bottom: 0;
    width: 100%;
}
._feed_inner_pulic_story_para {
    text-align: center;
    color: #fff;
    font-size: 12px;
    margin: 0 0 10px;
    line-height: 19px;
    font-weight: 500;
}
._feed_inner_public_mini {
    position: absolute;
    top: 12px;
    z-index: 1;
    right: 12px;
}
._public_mini_img {
    background: var(--color3);;
    border: 2px solid var(--bg2);
    border-radius: 40px;
    max-width: 28px;
}
._feed_inner_ppl_card {
    position: relative;
}
._feed_inner_story_arrow_btn {
    background: var(--color5);
    border: 1px solid var(--bg1);
    border-radius: 40px;
    width: 24px;
    height: 24px;
    padding: 0 7px;
}
._feed_inner_story_arrow_btn svg {
    margin: -2px 0 0 0;
}
._feed_inner_story_arrow {
    position: absolute;
    top: 50%;
    right: -5px;
    z-index: 18;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}
._feed_inner_text_area_box_image {
    cursor:pointer;
}
._txt_img {
    max-width: 40px;
    border-radius: 50%;
    padding:1px;
}
._feed_inner_text_area {
    background: var(--bg2);
    -webkit-transition:.2s all ease;
    -o-transition:.2s all ease;
    transition:.2s all ease;
}
._feed_inner_text_area_box {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: start;
        -ms-flex-align: start;
            align-items: start;
}
._feed_inner_text_area_box_form textarea {
    width: 100%;
    height: calc(86px + 2px) !important;
    border: none;
    padding: 8px !important;
}
._feed_inner_text_area_bottom {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    padding: 0 15px;
    background: rgba(24, 144, 255, 0.05);
    border-radius: 0px 0px 6px 6px;
    height: 64px;
    margin: 10px 0 0 0;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
}
._feed_inner_text_area_item {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}
._feed_common {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-transition:.2s all ease;
    -o-transition:.2s all ease;
    transition:.2s all ease;
    cursor: pointer;
    padding: 0 10px;
}
._feed_common path {
    -webkit-transition: .2s all ease;
    -o-transition: .2s all ease;
    transition: .2s all ease;
}
._feed_common:hover path {
    fill:var(--color5);
}
._feed_inner_text_area_bottom_photo_link {
    font-weight: normal;
    font-size: 16px;
    line-height: 23px;
    color: var(--color7);
    -webkit-transition:.2s all ease;
    -o-transition:.2s all ease;
    transition:.2s all ease;
    border:none;
    background:transparent;
    transition:.2s all ease;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
}
._feed_inner_text_area_bottom_photo_link:hover {
    color:var(--color5);
}
._mar_img {
    margin:0 8px 0 0;
}
._feed_inner_text_area_btn_link {
    background: var(--color5);
    border-radius: 6px;
    padding:12px 22px;
    border:1px solid transparent;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-transition:.2s all ease;
    -o-transition:.2s all ease;
    transition:.2s all ease;
}
._feed_inner_text_area_btn_link:hover {
    background:#377DFF;
}
._feed_inner_text_area_btn_link span {
    font-weight: 500;
    font-size: 16px;
    line-height: 24px;
    color: var(--bg2);
}
._feed_inner_text_area_box_form {
    position: relative;
    width: 100%;
    height: 100%;
}
._feed_textarea_label {
    font-weight: normal;
    font-size: 16px;
    line-height: 1.1;
    color: var(--color7);
    padding: 8px !important;
    height: auto !important;
}
._textarea::-webkit-input-placeholder{
    font-size: 12px;
    color: var(--color7)6;
}
._textarea::-moz-placeholder{
    font-size: 12px;
    color: var(--color7)6;
}
._textarea:-ms-input-placeholder{
    font-size: 12px;
    color: var(--color7)6;
}
._textarea::-ms-input-placeholder{
    font-size: 12px;
    color: var(--color7)6;
}
._textarea::placeholder{
    font-size: 12px;
    color: var(--color7)6;
}
/* ... */

